2011-02-14 Roman
- UI.WebVision, UI.Vision: Real precision for attributes is fixed and allowed 3 digit precision for widet's coordinates everywhere.
    Digits number for precision is set to main defined variable.


2011-02-13 Roman
- UI.Vision: Real precision for attributes is fixed and allowed 3 digit precision for widet's coordinates everywhere.


2011-02-12 Roman
- UI.Vision: Lost connection to visualisation server message is added for run from visualisation server.


2011-02-11 Maxim
- UI.WebVision: Widget's position remnant is acquired for internal points coordinates calc of primitive "ElFigure".


2011-02-11 Roman
- UI.Vision: Widget's position remnant is acquired for internal points coordinates calc of primitive "ElFigure".
    Real attributes precision is rise to 3 digits.
- !:FIX:UI.Vision: Run project crash is fixed for project's calc period more 500 ms.
- DAQ.BFN, DAQ.BlockCalc: All warnings is resolved for "-Wall" compile option.


2011-02-08 Roman
- !!:FIX:Archive: Using soft grid buffer for high and low resolution time is fixed for archiving.
- FIX:Config: Copy heterogenous nodes config properties is fixed.
- !!:Transport.*, Protocol.*, Special.*, DAQ.AMRDevs: All warnings is resolved for "-Wall" compile option.
- DAQ.ModBus: Syntax highlight rules is some updated. DAQ parameter's attributes list help is supplemented.
- FIX:Transport.Serial: Set O_NONBLOCK flag to function open() of serial device, for prevent it hang on several USB->RS485 converters.
- UI.VCAEngine: Included widgets counter and pages into a progect and into other pages is added.


2011-02-07 Roman
- DAQ.System: The library libsensors disable is added for no allowed the library.
- FIX:DAQ.System: Crash is fixed on exit for source "Hddtemp" exeptions at it destroy.
- TArchives, Archive.FSArch: Multiscan for an archive directory is disabled at the program start.
- !!:DB: User API functions fieldStruct(), fieldSeek(), fieldGet(), fieldSet() and fieldDel() for Table object is added.